--- a/iv2shulte3/src/assets/style.less
+++ b/iv2shulte3/src/assets/style.less
@@ -1,8 +1,15 @@
 body {
-  background-color:black;
+  background-image:url(https://ivanshavliuga.github.io/crios/images/header.png);
+  background-size: cover;
 }
 #app {
   background-color:black;
+  opacity: 0.9;
+  margin: 45px auto;
+  padding: 10px;
+  width: 350px;
+  height: 450px;
+  border: 1px dotted #df56d5;
 }
 #app > div {
   display: flex;
@@ -72,6 +79,14 @@ body {
   display: inline-block;
   margin: 0 10px;
 }
+
+.current {
+   display: block;
+   color: #fff;
+   padding: 5px;
+   opacity: 0.5;
+ }
+
 @keyframes opacityeff {
   0% {
       opacity:0.1;
